--- a/host-app/package.json
+++ b/host-app/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@module-federation/nextjs-mf": "8.8.24",
+    "antd": "^5.24.7",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18"
