--- a/products-remote/package.json
+++ b/products-remote/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NEXT_PRIVATE_LOCAL_WEBPACK=true next dev",
+    "dev": "cross-env NEXT_PRIVATE_LOCAL_WEBPACK=true next dev -p 3001",
     "build": "cross-env NEXT_PRIVATE_LOCAL_WEBPACK=true next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@module-federation/nextjs-mf": "8.8.24",
+    "antd": "^5.24.7",
     "next": "^13.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
