--- a/host-app/package.json
+++ b/host-app/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
     "@module-federation/nextjs-mf": "8.8.24",
+    "@reduxjs/toolkit": "^2.7.0",
     "antd": "^5.24.7",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
