--- a/basket-remote/package.json
+++ b/basket-remote/package.json
@@ -14,7 +14,8 @@
     "antd": "^5.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
