--- a/host-app/package.json
+++ b/host-app/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "cross-env NEXT_PRIVATE_LOCAL_WEBPACK=true next dev -p 3000",
+    "build": "cross-env NEXT_PRIVATE_LOCAL_WEBPACK=true next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -13,10 +13,12 @@
     "@module-federation/nextjs-mf": "8.8.24",
     "@reduxjs/toolkit": "^2.7.0",
     "antd": "^5.24.7",
+    "cross-env": "^7.0.3",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.5.1"
   },
   "devDependencies": {
     "@types/node": "^20",
